--- a/shadow.conf
+++ b/shadow.conf
@@ -15,7 +15,7 @@ dns-server = 8.8.8.8, 8.8.4.4, https://dns.adguard.com/dns-query
 ipv6 = false
 
 # Configuration update url
-update-url = https://sibdata.com/sr/shadow.conf
+update-url = https://github.com/danaenayati/Shadowrocket-Iran-Config/blob/35017172663a2b59eda455aa1c44c6f297e63a52/shadow.conf
 
 
 [Rule]
