--- a/shadow.conf
+++ b/shadow.conf
@@ -1,6 +1,6 @@
 # Author : Dana Enayati
 # Version : 1.2.0
-## Deeplink: shadowrocket://config/add/https://sibdata.com/sr/shadow.conf
+## Deeplink: shadowrocket://config/add/https://github.com/danaenayati/Shadowrocket-Iran-Config/blob/c2a82bd3f9799c470f4982e14bc1d76b18286536/shadow.conf
 
 
 [General]
