--- a/shadow.conf
+++ b/shadow.conf
@@ -16,3 +16,6 @@ IP-CIDR,10.0.0.0/8,DIRECT
 IP-CIDR,172.16.0.0/12,DIRECT
 IP-CIDR,127.0.0.0/8,DIRECT
 GEOIP,IR,DIRECT
+
+# Direct Rules plist
+RULE-SET,https://raw.githubusercontent.com/danaenayati/Shadowrocket-Iran-Config/refs/heads/main/rules/direct/iran-url.list.txt,DIRECT
