--- a/shadow.conf
+++ b/shadow.conf
@@ -19,3 +19,7 @@ GEOIP,IR,DIRECT
 
 # Direct Rules plist
 RULE-SET,https://raw.githubusercontent.com/danaenayati/Shadowrocket-Iran-Config/refs/heads/main/rules/direct/iran-url.list.txt,DIRECT
+
+FINAL,PROXY
+[Host]
+localhost = 127.0.0.1
